--- a/WebContent/resources/css/cadastro.css
+++ b/WebContent/resources/css/cadastro.css
@@ -11,7 +11,7 @@
 	font-size: 140%;
 	font-weight: 300;
 	text-align: center;
-	color: #fff;
+	color: #ffffff;
 	margin: -16px -16px 16px -16px;
 }
 .form-style-6 input[type="text"],
@@ -74,4 +74,8 @@
 .form-style-6 input[type="submit"]:hover,
 .form-style-6 input[type="button"]:hover{
 	background: #2EBC99;
+}
+
+#msg-login-repetido{
+	color:red;
 }
