mudando o projeto para que possa ser cadastrado o telefone

--- a/WebContent/resources/css/cadastro.css
+++ b/WebContent/resources/css/cadastro.css
@@ -64,7 +64,7 @@
 	-moz-box-sizing: border-box;
 	width: 100%;
 	padding: 3%;
-	background: #00ffff;
+	background: #00cccc;
 	border-bottom: 2px solid #30C29E;
 	border-top-style: none;
 	border-right-style: none;
